# Xemu-BLE-Dongle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  ble_hid_task_startup_stub.c  esp_hid_device_main.c  esp_hid_gap.c  esp_hid_gap.h  hid_gamepad.c  hid_gamepad.h  input_mapper.c  input_mapper.h  power_manager.c  power_manager.h  usb_gip_host.c  usb_gip_host.h
